added soothing leaf logo

--- a/environapp/templates/index.html
+++ b/environapp/templates/index.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+  <img src="/static/tea-leaves.png">
   <form method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
