--- a/environapp/templates/index.html
+++ b/environapp/templates/index.html
@@ -13,7 +13,13 @@
     <input type="password" name="password" id="password" required>
     <label for="phoneno">Phone Number</label>
     <input name="phoneno" id="phoneno" required>
-    <input type="submit" value="Register">
+    <input type="submit" name="submit_button" value="Register">
+  </form>
+
+  <br>
+
+  <form method="post">
+    <input type="submit" name="submit_button" value="Compare">
   </form>
 
   <script type="text/javascript">
