--- a/environapp/templates/compare.html
+++ b/environapp/templates/compare.html
@@ -50,8 +50,8 @@
   const redThresh = 100; // >
   const max = 180;
 
-  // const userGallons = 76; // placeholder. TODO: replace with number from database
-  const userGallons = parseInt(document.getElementById("water").innerHTML)
+  const userGallons = 76; // placeholder. TODO: replace with number from database
+  // const userGallons = parseInt(document.getElementById("water").innerHTML)
 
   // give tips
   let tipText = userGallons < greenThresh ? "You're doing great!" : "You could be saving more water!";
